--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 .interface{
   background:#42445A;
-  min-height:100vh;
+  height:100vh;
   width:100vw;
   display:flex;
   justify-content: center;
